Added jar for base64